# files-server-fastapi

./: LICENSE  README.md  pyproject.toml
src/files_server_fastapi/: __init__.py
src/files_server_fastapi/dependencies/: __init__.py  user_dependencies.py
src/files_server_fastapi/files/: __init__.py  acls_router.py  constants.py  create_file_router.py  delete_router.py  dependencies.py  download_router.py  folder_router.py  list_router.py  media_token.py  onlyoffice_router.py  open_url_router.py  path_utils.py  search_router.py  stats_router.py  tree_router.py  upload_router.py  view_router.py  webdav_setup.py
src/files_server_fastapi/models/: __init__.py  area_model.py  favoritos_model.py  permisos_model.py  rol_model.py  rutas_model.py  users_extend_model.py
src/files_server_fastapi/routers/: __init__.py  area_router.py  favoritos_router.py  files_router.py  permisos_router.py  rol_router.py  rutas_router.py  samba_router.py  users_extend_router.py
src/files_server_fastapi/security/: __init__.py  samba_crypto.py
