[project]
name = "files-server-fastapi"
version = "0.1.10"
description = "Este repositorio es un paquete python desarrollado con FastAPI, gestiona la comunicación con un servidor Samba y utiliza PostgreSQL para administrar rutas de archivos y el control de acceso basado en roles (RBAC) de los usuarios."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Aldo Blancas" },
]
keywords = ["fastapi", "samba", "fileserver", "rbac", "postgresql"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
]
requires-python = ">=3.10"
dependencies = [
    "oauth2fast-fastapi==0.2.5",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "build",
    "twine",
]

test = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/AldoBP/files-server-fastapi"
Repository = "https://github.com/AldoBP/files-server-fastapi"
Issues = "https://github.com/AldoBP/files-server-fastapi/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/files_server_fastapi"]

